<resources>
    <string name="app_name">Mixer</string>
    <string name="button_account">Create Account</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_create_account">Create Account</string>

    <!-- Strings related to Create Account -->
    <string name="prompt_FirstName">First Name</string>
    <string name="prompt_LastName">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_usermane">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmPassword">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_with_mixer">Login With Mixer</string>
    <string name="account">Account</string>
    <string name="matches">Matches</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_meal">Add Meal</string>
    <string name="account_settings">Account Settings</string>
    <string name="welcome_to_whisc">Welcome to Whisc</string>
    <string name="login_with_whisc">Login with Whisc</string>
    <string name="meal_name">Meal Name</string>
</resources>
